--- a/style-expanded.css
+++ b/style-expanded.css
@@ -324,6 +324,12 @@ html {
 .sidenav #sidenav-wrapper i {
   margin-right: 0.5em;
 }
+.sidenav .admin-role,
+.sidenav .visitor-role,
+.sidenav .member-role,
+.sidenav .sus-user {
+  width: 300px;
+}
 .sidenav .admin-role {
   padding: 1em 0em 1em 1.5em;
   font-size: 0.8em;
